# mock-interview-ai

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/auth/: deps.py  google.py  jwt.py
backend/app/interview/: evaluator.py  orchestrator.py  reporter.py  ws.py
backend/app/llm/: client.py  prompts.py  schemas.py
backend/app/models/: answer.py  api_key.py  question.py  resume.py  session.py  user.py
backend/app/routers/: analytics.py  auth.py  reports.py  resumes.py  sessions.py  settings.py
backend/app/services/: crypto.py  pdf.py  resume_parser.py
backend/app/templates/: report.html.j2
backend/tests/: test_crypto.py  test_jwt.py  test_reporter.py
frontend/: .env.example  Dockerfile  fly.toml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppLayout.tsx  BrowserWarning.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/components/interview/: AnswerInput.tsx  EvaluationCard.tsx  QuestionPanel.tsx  Timer.tsx  Transcript.tsx
frontend/src/hooks/: useAuth.ts  useInterviewSocket.ts  useWebSpeech.ts
frontend/src/pages/: Configure.tsx  Dashboard.tsx  Interview.tsx  Landing.tsx  Login.tsx  Report.tsx  Settings.tsx
frontend/src/stores/: authStore.ts  sessionDraftStore.ts  uiStore.ts
frontend/src/types/: api.ts
(+6 files in other folders)
